*2---> agregue foto, header, body, columnas, filas, banner, experienncia, educacion (tex no definitivo). footer)

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,24 +1,96 @@
 <!doctype html>
 <html lang="eS">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <title>Portfolio Jonathan Carranza</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./STYLES.css">
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
-  <body>
+
+<body>
+    <header>
+        <div class="container-fluid" style="background-color: rgb(82, 151, 207);">
+            <div class="row">
+                <div class="col align-self-start">
+                    <img style="text-align: left;" src="./imagenes/arg-program.png" alt="">
+                </div>
+                <div class="col">
+                    <h5 style="text-align: right;"> JonathanCarranza70@gmail.com</h5>
+                    <h5 style="text-align: right;"> Instagram</h5>
+                    <h5 style="text-align: right;"> Wathsapp</h5>
+                    <h5 style="text-align: right;"> Log In </h5>
+                 </div>
+            </div>
+        </div>
+    </header>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col">
+<img class="img-fluid" src="./imagenes/banner5.jpg" alt="">
+        </div>
+    </div>
+</div>
+
+
+
+<div class="container" style="background-color: rgb(101, 180, 180);">
+    <div class="row">
+        <div class="col">
+            <img  style="height: 200px;border-radius: 100px; " src="./imagenes/JonathanCarranza.jpeg" alt="foto de Jonathan Carranza">
+        </div>
+ <div class="col">
+<aside>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium reprehenderit eius necessitatibus inventore exercitationem adipisci soluta ut doloribus consequatur labore.
+</aside>
+ </div>
+
+ <div class="col">
+    <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt beatae ipsam perspiciatis aspernatur necessitatibus accusamus esse, quaerat quo eum expedita, incidunt cupiditate iste tempore atque possimus maxime nemo illo! Harum et non qui voluptate voluptatum beatae facere, nihil ullam nemo provident aut incidunt nam autem amet quas doloremque? Unde, fugit!
+    </p>
+ </div>
+
     
-
-    <h1> radiante sol</h1>
-    <h2>luna brillarnte</h2>
-    <h3>mar adentro</h3>
-
-
-
+   
+   
+   
+    </div>
+</div>
 
 
+<div class="container" style="background-color: bisque;">
+    <div class="row"> <h1>Experiencia</h1>
+        <div class="col">
+<h3>zrasa</h3>
+        </div>
+        <div class="col">
+<h3>dfhkjsdh</h3>
+        </div>
+        <div class="col">
+<h3>fldsfd</h3>
+        </div>
+    </div>
+</div>
+
+
+<div class="container" style="background-color:rgb(196, 145, 68);">
+    <div class="row"> <h1>Educacion</h1>
+        <div class="col">
+            <h3>fjkdsjf</h3>
+        </div>
+        <div class="col">
+            <h3>jhfkjsf</h3>
+        </div>
+        <div class="col">
+            <h3>djfhjdsf</h3>
+        </div>
+    </div>
+</div>
 
 
 
@@ -26,16 +98,15 @@
 
 
 
+<footer>
+    Todos los derechos reservados, ja!
+</footer>
 
 
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+</body>
 
-
-
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-  </body>
 </html>
